BPER/DEVF/force-app/main/default/objects/Ruolo_BPER__mdt/Ruolo_BPER__mdt.object-meta.xml
<CustomObject>
    <label>Ruolo BPER</label>
    <pluralLabel>Ruoli BPER</pluralLabel>
</CustomObject>