BPER/DEVF/force-app/main/default/objects/Ruolo_BPER__mdt/fields/IDCed__c.field-meta.xml
<CustomField>
    <fullName>IDCed__c</fullName>
    <label>IDCed</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>