BPER/DEVF/force-app/main/default/objects/Ruolo_BPER__mdt/fields/Ruolo_LDAP__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_LDAP__c</fullName>
    <label>Ruolo LDAP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>