BPER/DEVF/force-app/main/default/objects/Ruolo_BPER__mdt/fields/Ruolo_LDAP_Calcolato__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_LDAP_Calcolato__c</fullName>
    <label>Ruolo LDAP Calcolato</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>