BPER/DEVF/force-app/main/default/objects/Ruolo_BPER__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;EQ&apos;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQ</fullName>
                <default>true</default>
                <label>EQ</label>
            </value>
            <value>
                <fullName>NOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>